--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <title>AluraBooks</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="cabeçalho">
-      <div class="container-botao">
+      <div class="container">
         <input type="checkbox" id="menu" class="container__botao" />
         <label for="menu">
           <span class="cabeçalho__menu container__imagem"></span>
@@ -32,13 +38,13 @@
             <a href="#" class="lista-menu__link">DESING & UX</a>
           </li>
         </ul>
-      </div>
-      <div class="container">
         <img
           src="assets/Logo.svg"
           alt="Logo do AluraBooks"
           class="container__imagem"
         />
+      </div>
+      <div class="container">
         <a href="#"
           ><img
             src="assets/Favoritos.svg"
@@ -59,5 +65,15 @@
         /></a>
       </div>
     </header>
+    <section class="banner">
+      <h2 class="banner__titulo">Já sabe por onde começar?</h2>
+      <p class="banner__texto">
+        Encontre em nossa estante o que precisa para seu desenvolvimento!
+      </p>
+      <span class="banner__pesquisa">
+        <img src="assets/Lupa.svg" alt="" />
+        <p>Qual será sua próxima leitura?</p>
+      </span>
+    </section>
   </body>
 </html>
