--- a/index.html
+++ b/index.html
@@ -70,10 +70,15 @@
       <p class="banner__texto">
         Encontre em nossa estante o que precisa para seu desenvolvimento!
       </p>
-      <span class="banner__pesquisa">
-        <img src="assets/Lupa.svg" alt="" />
-        <p>Qual será sua próxima leitura?</p>
-      </span>
+
+      <input
+        type="search"
+        class="banner__pesquisa"
+        placeholder="Qual será sua próxima leitura?"
+      />
+    </section>
+    <section class="carrossel">
+      <h2 class="carrossel__titulo">ÚLTIMOS LANÇAMENTOS</h2>
     </section>
   </body>
 </html>
