--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="cabeçalho">
-      <div class="container">
+      <div class="cabeçalho__container">
         <input type="checkbox" id="menu" class="container__botao" />
         <label for="menu">
           <span class="cabeçalho__menu container__imagem"></span>
@@ -48,7 +48,7 @@
           class="container__imagem"
         />
       </div>
-      <div class="container">
+      <div class="cabeçalho__container">
         <a href="#"
           ><img
             src="assets/Favoritos.svg"
