--- a/index.html
+++ b/index.html
@@ -126,6 +126,17 @@
               Construindo uma aplicação integrada com a plataforma do Google.
             </p>
           </div>
+          <img src="assets/Angular.svg" class="descrição__imagem" />
+        </div>
+
+        <div class="card__botões">
+          <ul class="" botões>
+            <li class="botões__item"><img src="assets/Favoritos.svg" /></li>
+            <li class="botões__item">
+              <img src="assets/Compras.svg" />
+            </li>
+          </ul>
+          <a href="#" class="botões__ancora">Saiba mais</a>
         </div>
       </div>
     </section>
