--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       />
     </section>
     <section class="carrossel">
-      <h2 class="carrossel__titulo">ÚLTIMOS LANÇAMENTOS</h2>
+      <h2 class="carrossel__titulo">últimos lançamentos</h2>
       <!-- Slider main container -->
       <div class="swiper">
         <!-- If we need pagination -->
@@ -130,8 +130,10 @@
         </div>
 
         <div class="card__botões">
-          <ul class="" botões>
-            <li class="botões__item"><img src="assets/Favoritos.svg" /></li>
+          <ul class="botões">
+            <li class="botões__item">
+              <img src="assets/Favoritos.svg" />
+            </li>
             <li class="botões__item">
               <img src="assets/Compras.svg" />
             </li>
@@ -139,6 +141,100 @@
           <a href="#" class="botões__ancora">Saiba mais</a>
         </div>
       </div>
+    </section>
+
+    <section class="carrosel">
+      <h2 class="carrossel__titulo">mais vendidos</h2>
+      <!-- Slider main container -->
+      <div class="swiper">
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide">
+            <img src="assets/ApacheKafka.svg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/Liderança.svg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/Javascript.svg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/Guia Front-end.svg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/Portugol.svg" alt="" />
+          </div>
+          <div class="swiper-slide">
+            <img src="assets/Acessibilidade.svg" alt="" />
+          </div>
+          ...
+        </div>
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+      </div>
+
+      <div class="card">
+        <div class="card__descrição">
+          <div class="descrição">
+            <img src="assets/Estrelinhas.svg" class="descrição__estrelas" />
+            <h3 class="descrição__titulo">Autora do Mês</h3>
+            <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+            <p class="descrilção__texto">
+              Analista de sistemas e escritora, Juliana é especialista em
+              Front-End.
+            </p>
+          </div>
+          <img src="assets/Escritora.svg" class="descrição__imagem" />
+        </div>
+
+        <div class="card__botões">
+          <ul class="botões">
+            <li class="botões__item">
+              <img src="assets/Favoritos.svg" />
+            </li>
+            <li class="botões__item">
+              <img src="assets/Compras.svg" />
+            </li>
+          </ul>
+          <a href="#" class="botões__ancora">Saiba mais</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="tópicos">
+      <h2 class="tópicos__titulo">
+        TÓPICOS VISITADOS RECENTEMENTE
+      </h2>
+      <ul class="tópicos__lista">
+        <li class="tópicos__item">
+          <a href="#" class="tópicos__link">Android</a>
+        </li>
+        <li class="tópicos__item">
+          <a href="#" class="tópicos__link">Marketing Digital</a>
+        </li>
+        <li class="tópicos__item">
+          <a href="#" class="tópicos__link">Agile</a>
+        </li>
+        <li class="tópicos__item">
+          <a href="#" class="tópicos__link">Startups</a>
+        </li>
+        <li class="tópicos__item">
+          <a href="#" class="tópicos__link">HTML & CSS</a>
+        </li>
+        <li class="tópicos__item">
+          <a href="#" class="tópicos__link">Python</a>
+        </li>
+        <li class="tópicos__item">
+          <a href="#" class="tópicos__link">OO</a>
+        </li>
+        <li class="tópicos__item">
+          <a href="#" class="tópicos__link">Java/a>
+        </li>
+      </ul>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
