--- a/index.html
+++ b/index.html
@@ -206,9 +206,7 @@
     </section>
 
     <section class="tópicos">
-      <h2 class="tópicos__titulo">
-        TÓPICOS VISITADOS RECENTEMENTE
-      </h2>
+      <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
       <ul class="tópicos__lista">
         <li class="tópicos__item">
           <a href="#" class="tópicos__link">Android</a>
@@ -232,10 +230,24 @@
           <a href="#" class="tópicos__link">OO</a>
         </li>
         <li class="tópicos__item">
-          <a href="#" class="tópicos__link">Java/a>
+          <a href="#" class="tópicos__link">Java</a>
         </li>
       </ul>
     </section>
+
+    <section class="contato">
+      <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+      <p class="contato__texto">
+        Atualizações de e-books, novos livros, promoções e outros.
+      </p>
+      <input
+        type="email"
+        placeholder="Cadastre seu e-mail"
+        class="contato__email"
+      />
+    </section>
+
+    <footer class="rodapé"></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
