--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Poppins:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -47,13 +47,47 @@
           alt="Logo do AluraBooks"
           class="container__imagem"
         />
+        <h1 class="container__titulo">
+          <b class="container__titulo-negrito">Alura</b>Books
+        </h1>
       </div>
+
+      <ul class="opções">
+        <input type="checkbox" id="opções-menu" class="opções__botão" />
+        <label for="opções-menu">
+          <li class="opções__item opções__item-categorias">categorias</li>
+        </label>
+        <ul class="lista-menu">
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link lista-menu__link-programacao">PROGRAMAÇÃO</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">FRONT-END</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">INFRAESTRUTURA</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">BUSINESS</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">DESING & UX</a>
+          </li>
+        </ul>
+        <li class="opções__item">
+          <a href="#" class="opções__link">favoritos</a>
+        </li>
+        <li class="opções__item">
+          <a href="#" class="opções__link">minha estante</a>
+        </li>
+      </ul>
+
       <div class="cabeçalho__container">
         <a href="#"
           ><img
             src="assets/Favoritos.svg"
             alt="Favoritos"
-            class="container__imagem"
+            class="container__imagem container__imagem-transparente"
         /></a>
         <a href="#"
           ><img
