--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
         </label>
         <ul class="lista-menu">
           <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link lista-menu__link-programacao">PROGRAMAÇÃO</a>
+            <a href="#" class="lista-menu__link lista-menu__link-programacao"
+              >PROGRAMAÇÃO</a
+            >
           </li>
           <li class="lista-menu__item">
             <a href="#" class="lista-menu__link">FRONT-END</a>
@@ -270,10 +272,12 @@
     </section>
 
     <section class="contato">
-      <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
-      <p class="contato__texto">
-        Atualizações de e-books, novos livros, promoções e outros.
-      </p>
+      <div class="contato__descrição">
+        <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+        <p class="contato__texto">
+          Atualizações de e-books, novos livros, promoções e outros.
+        </p>
+      </div>
       <input
         type="email"
         placeholder="Cadastre seu e-mail"
@@ -285,6 +289,78 @@
 
     <footer class="rodapé">
       <h2 class="rodapé__titulo">Grupo Alura</h2>
+      <ul class="rodapé__lista">
+        <li class="lista__nome">educação</li>
+        <li class="lista__item">
+          <img src="assets/Caelum.svg" class="lista__imagem" />
+          <p class="lista__texto">Caelum</p>
+        </li>
+        <li class="lista__item">
+          <img src="assets/CasaDoCodigo.svg" class="lista__imagem" />
+          <p class="lista__texto">Casa do Código</p>
+        </li>
+      </ul>
+      <ul class="rodapé__lista">
+        <li class="lista__nome">educação online</li>
+        <li class="lista__item">
+          <img src="assets/Alura.svg" class="lista__imagem" />
+          <p class="lista__texto">Alura</p>
+        </li>
+        <li class="lista__item">
+          <img src="assets/AluraEmpresas.svg" class="lista__imagem" />
+          <p class="lista__texto">Alura para Empresas</p>
+        </li>
+
+        <li class="lista__item">
+          <img src="assets/AluraLATAM.svg" class="lista__imagem" />
+          <p class="lista__texto">Alura LATAM</p>
+        </li>
+        <li class="lista__item">
+          <img src="assets/MusicDot.svg" class="lista__imagem" />
+          <p class="lista__texto">Alura Start</p>
+        </li>
+
+        <li class="lista__item">
+          <img src="assets/AluraLingua.svg" class="lista__imagem" />
+          <p class="lista__texto">Alura Língua</p>
+        </li>
+
+        <li class="lista__item">
+          <img src="assets/PM3.svg" class="lista__imagem" />
+          <p class="lista__texto">PM3</p>
+        </li>
+      </ul>
+      <ul class="rodapé__lista">
+        <li class="lista__nome">comunidade</li>
+        <li class="lista__item">
+          <img src="assets/HipstersTech.svg" class="lista__imagem" />
+          <p class="lista__texto">Hipsters ponto Tech</p>
+        </li>
+        <li class="lista__item">
+          <img src="assets/ScubaDev.svg" class="lista__imagem" />
+          <p class="lista__texto">Scuba Dev</p>
+        </li>
+        <li class="lista__item">
+          <img src="assets/LayersTech.svg" class="lista__imagem" />
+          <p class="lista__texto">Layers ponto Tech</p>
+        </li>
+        <li class="lista__item">
+          <img src="assets/LikeABoss.svg" class="lista__imagem" />
+          <p class="lista__texto">Like a Boss</p>
+        </li>
+        <li class="lista__item">
+          <img src="assets/CarreiraSemFronteira.svg" class="lista__imagem" />
+          <p class="lista__texto">Carreira sem Fronteira</p>
+        </li>
+        <li class="lista__item">
+          <img src="assets/HipstersJobs.svg" class="lista__imagem" />
+          <p class="lista__texto">Hipsters ponto Jobs</p>
+        </li>
+        <li class="lista__item">
+          <img src="assets/GUJ.svg" class="lista__imagem" />
+          <p class="lista__texto">GUJ</p>
+        </li>
+      </ul>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
