--- a/index.html
+++ b/index.html
@@ -105,186 +105,188 @@
         /></a>
       </div>
     </header>
-    <section class="banner">
-      <h2 class="banner__titulo">Já sabe por onde começar?</h2>
-      <p class="banner__texto">
-        Encontre em nossa estante o que precisa para seu desenvolvimento!
-      </p>
-
-      <input
-        type="search"
-        class="banner__pesquisa"
-        placeholder="Qual será sua próxima leitura?"
-      />
-    </section>
-    <section class="carrossel">
-      <h2 class="carrossel__titulo">últimos lançamentos</h2>
-      <!-- Slider main container -->
-      <div class="swiper">
-        <!-- If we need pagination -->
-        <div class="swiper-pagination"></div>
-        <!-- Additional required wrapper -->
-        <div class="swiper-wrapper">
-          <!-- Slides -->
-          <div class="swiper-slide">
-            <img src="assets/ApacheKafka.svg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/Liderança.svg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/Javascript.svg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/Guia Front-end.svg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/Portugol.svg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/Acessibilidade.svg" alt="" />
-          </div>
-          ...
-        </div>
-        <!-- If we need navigation buttons -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-      </div>
-
-      <div class="card">
-        <div class="card__descrição">
-          <div class="descrição">
-            <h3 class="descrição__titulo">
-              Talvez você também se interesse por...
-            </h3>
-            <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
-            <p class="descrição__texto">
-              Construindo uma aplicação integrada com a plataforma do Google.
-            </p>
-          </div>
-          <img src="assets/Angular.svg" class="descrição__imagem" />
-        </div>
-
-        <div class="card__botões">
-          <ul class="botões">
-            <li class="botões__item">
-              <img src="assets/Favoritos.svg" />
-            </li>
-            <li class="botões__item">
-              <img src="assets/Compras.svg" />
-            </li>
-          </ul>
-          <a href="#" class="botões__ancora">Saiba mais</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="carrosel">
-      <h2 class="carrossel__titulo">mais vendidos</h2>
-      <!-- Slider main container -->
-      <div class="swiper">
-        <!-- If we need pagination -->
-        <div class="swiper-pagination"></div>
-        <!-- Additional required wrapper -->
-        <div class="swiper-wrapper">
-          <!-- Slides -->
-          <div class="swiper-slide">
-            <img src="assets/ApacheKafka.svg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/Liderança.svg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/Javascript.svg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/Guia Front-end.svg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/Portugol.svg" alt="" />
-          </div>
-          <div class="swiper-slide">
-            <img src="assets/Acessibilidade.svg" alt="" />
-          </div>
-          ...
-        </div>
-        <!-- If we need navigation buttons -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-      </div>
-
-      <div class="card">
-        <div class="card__descrição">
-          <div class="descrição">
-            <img src="assets/Estrelinhas.svg" class="descrição__estrelas" />
-            <h3 class="descrição__titulo">Autora do Mês</h3>
-            <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-            <p class="descrilção__texto">
-              Analista de sistemas e escritora, Juliana é especialista em
-              Front-End.
-            </p>
-          </div>
-          <img src="assets/Escritora.svg" class="descrição__imagem" />
-        </div>
-
-        <div class="card__botões">
-          <ul class="botões">
-            <li class="botões__item">
-              <img src="assets/Favoritos.svg" />
-            </li>
-            <li class="botões__item">
-              <img src="assets/Compras.svg" />
-            </li>
-          </ul>
-          <a href="#" class="botões__ancora">Saiba mais</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="tópicos">
-      <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
-      <ul class="tópicos__lista">
-        <li class="tópicos__item">
-          <a href="#" class="tópicos__link">Android</a>
-        </li>
-        <li class="tópicos__item">
-          <a href="#" class="tópicos__link">Marketing Digital</a>
-        </li>
-        <li class="tópicos__item">
-          <a href="#" class="tópicos__link">Agile</a>
-        </li>
-        <li class="tópicos__item">
-          <a href="#" class="tópicos__link">Startups</a>
-        </li>
-        <li class="tópicos__item">
-          <a href="#" class="tópicos__link">HTML & CSS</a>
-        </li>
-        <li class="tópicos__item">
-          <a href="#" class="tópicos__link">Python</a>
-        </li>
-        <li class="tópicos__item">
-          <a href="#" class="tópicos__link">OO</a>
-        </li>
-        <li class="tópicos__item">
-          <a href="#" class="tópicos__link">Java</a>
-        </li>
-      </ul>
-    </section>
-
-    <section class="contato">
-      <div class="contato__descrição">
-        <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
-        <p class="contato__texto">
-          Atualizações de e-books, novos livros, promoções e outros.
+    <main>
+      <section class="banner">
+        <h2 class="banner__titulo">Já sabe por onde começar?</h2>
+        <p class="banner__texto">
+          Encontre em nossa estante o que precisa para seu desenvolvimento!
         </p>
-      </div>
-      <input
-        type="email"
-        placeholder="Cadastre seu e-mail"
-        class="contato__email"
-      />
-    </section>
 
+        <input
+          type="search"
+          class="banner__pesquisa"
+          placeholder="Qual será sua próxima leitura?"
+        />
+      </section>
+      <section class="carrossel">
+        <h2 class="carrossel__titulo">últimos lançamentos</h2>
+        <!-- Slider main container -->
+        <div class="swiper">
+          <!-- If we need pagination -->
+          <div class="swiper-pagination"></div>
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+              <img src="assets/ApacheKafka.svg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/Liderança.svg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/Javascript.svg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/Guia Front-end.svg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/Portugol.svg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/Acessibilidade.svg" alt="" />
+            </div>
+            ...
+          </div>
+          <!-- If we need navigation buttons -->
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+
+        <div class="card">
+          <div class="card__descrição">
+            <div class="descrição">
+              <h3 class="descrição__titulo">
+                Talvez você também se interesse por...
+              </h3>
+              <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
+              <p class="descrição__texto">
+                Construindo uma aplicação integrada com a plataforma do Google.
+              </p>
+            </div>
+            <img src="assets/Angular.svg" class="descrição__imagem" />
+          </div>
+
+          <div class="card__botões">
+            <ul class="botões">
+              <li class="botões__item">
+                <img src="assets/Favoritos.svg" />
+              </li>
+              <li class="botões__item">
+                <img src="assets/Compras.svg" />
+              </li>
+            </ul>
+            <a href="#" class="botões__ancora">Saiba mais</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="carrosel">
+        <h2 class="carrossel__titulo">mais vendidos</h2>
+        <!-- Slider main container -->
+        <div class="swiper">
+          <!-- If we need pagination -->
+          <div class="swiper-pagination"></div>
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+              <img src="assets/ApacheKafka.svg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/Liderança.svg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/Javascript.svg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/Guia Front-end.svg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/Portugol.svg" alt="" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/Acessibilidade.svg" alt="" />
+            </div>
+            ...
+          </div>
+          <!-- If we need navigation buttons -->
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+
+        <div class="card">
+          <div class="card__descrição">
+            <div class="descrição">
+              <img src="assets/Estrelinhas.svg" class="descrição__estrelas" />
+              <h3 class="descrição__titulo">Autora do Mês</h3>
+              <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+              <p class="descrilção__texto">
+                Analista de sistemas e escritora, Juliana é especialista em
+                Front-End.
+              </p>
+            </div>
+            <img src="assets/Escritora.svg" class="descrição__imagem" />
+          </div>
+
+          <div class="card__botões">
+            <ul class="botões">
+              <li class="botões__item">
+                <img src="assets/Favoritos.svg" />
+              </li>
+              <li class="botões__item">
+                <img src="assets/Compras.svg" />
+              </li>
+            </ul>
+            <a href="#" class="botões__ancora">Saiba mais</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="tópicos">
+        <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <ul class="tópicos__lista">
+          <li class="tópicos__item">
+            <a href="#" class="tópicos__link">Android</a>
+          </li>
+          <li class="tópicos__item">
+            <a href="#" class="tópicos__link">Marketing Digital</a>
+          </li>
+          <li class="tópicos__item">
+            <a href="#" class="tópicos__link">Agile</a>
+          </li>
+          <li class="tópicos__item">
+            <a href="#" class="tópicos__link">Startups</a>
+          </li>
+          <li class="tópicos__item">
+            <a href="#" class="tópicos__link">HTML & CSS</a>
+          </li>
+          <li class="tópicos__item">
+            <a href="#" class="tópicos__link">Python</a>
+          </li>
+          <li class="tópicos__item">
+            <a href="#" class="tópicos__link">OO</a>
+          </li>
+          <li class="tópicos__item">
+            <a href="#" class="tópicos__link">Java</a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="contato">
+        <div class="contato__descrição">
+          <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+          <p class="contato__texto">
+            Atualizações de e-books, novos livros, promoções e outros.
+          </p>
+        </div>
+        <input
+          type="email"
+          placeholder="Cadastre seu e-mail"
+          class="contato__email"
+        />
+      </section>
+    </main>
+    
     <hr />
 
     <footer class="rodapé">
@@ -292,73 +294,103 @@
       <ul class="rodapé__lista">
         <li class="lista__nome">educação</li>
         <li class="lista__item">
-          <img src="assets/Caelum.svg" class="lista__imagem" />
-          <p class="lista__texto">Caelum</p>
+          <a href="#" class="lista__link"
+            ><img src="assets/Caelum.svg" />
+            <p class="lista__link__texto">Caelum</p></a
+          >
         </li>
         <li class="lista__item">
-          <img src="assets/CasaDoCodigo.svg" class="lista__imagem" />
-          <p class="lista__texto">Casa do Código</p>
+          <a href="#" class="lista__link"
+            ><img src="assets/CasaDoCodigo.svg" />
+            <p class="lista__link__texto">Casa do Código</p></a
+          >
         </li>
       </ul>
       <ul class="rodapé__lista">
         <li class="lista__nome">educação online</li>
         <li class="lista__item">
-          <img src="assets/Alura.svg" class="lista__imagem" />
-          <p class="lista__texto">Alura</p>
+          <a href="#" class="lista__link"
+            ><img src="assets/Alura.svg" />
+            <p class="lista__link__texto">Alura</p></a
+          >
         </li>
         <li class="lista__item">
-          <img src="assets/AluraEmpresas.svg" class="lista__imagem" />
-          <p class="lista__texto">Alura para Empresas</p>
-        </li>
-
-        <li class="lista__item">
-          <img src="assets/AluraLATAM.svg" class="lista__imagem" />
-          <p class="lista__texto">Alura LATAM</p>
-        </li>
-        <li class="lista__item">
-          <img src="assets/MusicDot.svg" class="lista__imagem" />
-          <p class="lista__texto">Alura Start</p>
+          <a href="#" class="lista__link"
+            ><img src="assets/AluraEmpresas.svg" />
+            <p class="lista__link__texto">Alura para Empresas</p></a
+          >
         </li>
 
         <li class="lista__item">
-          <img src="assets/AluraLingua.svg" class="lista__imagem" />
-          <p class="lista__texto">Alura Língua</p>
+          <a href="#" class="lista__link"
+            ><img src="assets/AluraLATAM.svg" />
+            <p class="lista__link__texto">Alura LATAM</p></a
+          >
+        </li>
+        <li class="lista__item">
+          <a href="#" class="lista__link"
+            ><img src="assets/MusicDot.svg" />
+            <p class="lista__link__texto">Alura Start</p></a
+          >
         </li>
 
         <li class="lista__item">
-          <img src="assets/PM3.svg" class="lista__imagem" />
-          <p class="lista__texto">PM3</p>
+          <a href="#" class="lista__link"
+            ><img src="assets/AluraLingua.svg" />
+            <p class="lista__link__texto">Alura Língua</p></a
+          >
+        </li>
+
+        <li class="lista__item">
+          <a href="#" class="lista__link"
+            ><img src="assets/PM3.svg" />
+            <p class="lista__link__texto">PM3</p></a
+          >
         </li>
       </ul>
       <ul class="rodapé__lista">
         <li class="lista__nome">comunidade</li>
         <li class="lista__item">
-          <img src="assets/HipstersTech.svg" class="lista__imagem" />
-          <p class="lista__texto">Hipsters ponto Tech</p>
+          <a href="#" class="lista__link">
+            <img src="assets/HipstersTech.svg" />
+            <p class="lista__link__texto">Hipsters ponto Tech</p></a
+          >
         </li>
         <li class="lista__item">
-          <img src="assets/ScubaDev.svg" class="lista__imagem" />
-          <p class="lista__texto">Scuba Dev</p>
+          <a href="#" class="lista__link"
+            ><img src="assets/ScubaDev.svg" />
+            <p class="lista__link__texto">Scuba Dev</p></a
+          >
         </li>
         <li class="lista__item">
-          <img src="assets/LayersTech.svg" class="lista__imagem" />
-          <p class="lista__texto">Layers ponto Tech</p>
+          <a href="#" class="lista__link"
+            ><img src="assets/LayersTech.svg" />
+            <p class="lista__link__texto">Layers ponto Tech</p></a
+          >
         </li>
         <li class="lista__item">
-          <img src="assets/LikeABoss.svg" class="lista__imagem" />
-          <p class="lista__texto">Like a Boss</p>
+          <a href="#" class="lista__link"
+            ><img src="assets/LikeABoss.svg" />
+            <p class="lista__link__texto">Like a Boss</p></a
+          >
         </li>
         <li class="lista__item">
-          <img src="assets/CarreiraSemFronteira.svg" class="lista__imagem" />
-          <p class="lista__texto">Carreira sem Fronteira</p>
+          <a href="#" class="lista__link"
+            ><img src="assets/CarreiraSemFronteira.svg" />
+            <p class="lista__link__texto">Carreira sem Fronteira</p></a
+          >
         </li>
         <li class="lista__item">
-          <img src="assets/HipstersJobs.svg" class="lista__imagem" />
-          <p class="lista__texto">Hipsters ponto Jobs</p>
+          <a href="#" class="lista__link"
+            ><img src="assets/HipstersJobs.svg" />
+            <p class="lista__link__texto">Hipsters ponto Jobs</p></a
+          >
         </li>
         <li class="lista__item">
-          <img src="assets/GUJ.svg" class="lista__imagem" />
-          <p class="lista__texto">GUJ</p>
+          <a href="#" class="lista__link"
+            ><img src="assets/GUJ.svg" />
+            <p class="lista__link__texto">GUJ</p></a
+          >
         </li>
       </ul>
     </footer>
