--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AluraBooks</title>
     <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="styles/banner.css" />
+    <link rel="stylesheet" href="styles/carrossel.css" />
+    <link rel="stylesheet" href="styles/contato.css" />
+    <link rel="stylesheet" href="styles/footer.css" />
+    <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/topicos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -305,14 +311,14 @@
         <li class="lista__nome">educação</li>
         <li class="lista__item">
           <img src="assets/Caelum.svg" />
-          <a href="#" class="lista__link">
-            <p class="lista__link__texto">Caelum</p></a
+          <a href="#" class="lista-rodapé__link">
+            <p class="lista-rodapé__link__texto">Caelum</p></a
           >
         </li>
         <li class="lista__item">
           <img src="assets/CasaDoCodigo.svg" />
-          <a href="#" class="lista__link">
-            <p class="lista__link__texto">Casa do Código</p></a
+          <a href="#" class="lista-rodapé__link">
+            <p class="lista-rodapé__link__texto">Casa do Código</p></a
           >
         </li>
       </ul>
@@ -321,41 +327,41 @@
         <li class="lista__nome">educação online</li>
         <li class="lista__item">
           <img src="assets/Alura.svg" />
-          <a href="#" class="lista__link">
-            <p class="lista__link__texto">Alura</p></a
+          <a href="#" class="lista-rodapé__link">
+            <p class="lista-rodapé__link__texto">Alura</p></a
           >
         </li>
         <li class="lista__item">
           <img src="assets/AluraEmpresas.svg" />
-          <a href="#" class="lista__link">
-            <p class="lista__link__texto">Alura para Empresas</p></a
+          <a href="#" class="lista-rodapé__link">
+            <p class="lista-rodapé__link__texto">Alura para Empresas</p></a
           >
         </li>
 
         <li class="lista__item">
           <img src="assets/AluraLATAM.svg" />
-          <a href="#" class="lista__link">
-            <p class="lista__link__texto">Alura LATAM</p></a
+          <a href="#" class="lista-rodapé__link">
+            <p class="lista-rodapé__link__texto">Alura LATAM</p></a
           >
         </li>
         <li class="lista__item">
           <img src="assets/MusicDot.svg" />
-          <a href="#" class="lista__link">
-            <p class="lista__link__texto">Alura Start</p></a
+          <a href="#" class="lista-rodapé__link">
+            <p class="lista-rodapé__link__texto">Alura Start</p></a
           >
         </li>
 
         <li class="lista__item">
           <img src="assets/AluraLingua.svg" />
-          <a href="#" class="lista__link">
-            <p class="lista__link__texto">Alura Língua</p></a
+          <a href="#" class="lista-rodapé__link">
+            <p class="lista-rodapé__link__texto">Alura Língua</p></a
           >
         </li>
 
         <li class="lista__item">
           <img src="assets/PM3.svg" />
-          <a href="#" class="lista__link">
-            <p class="lista__link__texto">PM3</p></a
+          <a href="#" class="lista-rodapé__link">
+            <p class="lista-rodapé__link__texto">PM3</p></a
           >
         </li>
       </ul>
@@ -364,44 +370,44 @@
         <li class="lista__nome">comunidade</li>
         <li class="lista__item">
           <img src="assets/HipstersTech.svg" />
-          <a href="#" class="lista__link">
-            <p class="lista__link__texto">Hipsters ponto Tech</p></a
+          <a href="#" class="lista-rodapé__link">
+            <p class="lista-rodapé__link__texto">Hipsters ponto Tech</p></a
           >
         </li>
         <li class="lista__item">
           <img src="assets/ScubaDev.svg" />
-          <a href="#" class="lista__link">
-            <p class="lista__link__texto">Scuba Dev</p></a
+          <a href="#" class="lista-rodapé__link">
+            <p class="lista-rodapé__link__texto">Scuba Dev</p></a
           >
         </li>
         <li class="lista__item">
           <img src="assets/LayersTech.svg" />
-          <a href="#" class="lista__link">
-            <p class="lista__link__texto">Layers ponto Tech</p></a
+          <a href="#" class="lista-rodapé__link">
+            <p class="lista-rodapé__link__texto">Layers ponto Tech</p></a
           >
         </li>
         <li class="lista__item">
           <img src="assets/LikeABoss.svg" />
-          <a href="#" class="lista__link">
-            <p class="lista__link__texto">Like a Boss</p></a
+          <a href="#" class="lista-rodapé__link">
+            <p class="lista-rodapé__link__texto">Like a Boss</p></a
           >
         </li>
         <li class="lista__item">
           <img src="assets/CarreiraSemFronteira.svg" />
-          <a href="#" class="lista__link">
-            <p class="lista__link__texto">Carreira sem Fronteira</p></a
+          <a href="#" class="lista-rodapé__link">
+            <p class="lista-rodapé__link__texto">Carreira sem Fronteira</p></a
           >
         </li>
         <li class="lista__item">
           <img src="assets/HipstersJobs.svg" />
-          <a href="#" class="lista__link">
-            <p class="lista__link__texto">Hipsters ponto Jobs</p></a
+          <a href="#" class="lista-rodapé__link">
+            <p class="lista-rodapé__link__texto">Hipsters ponto Jobs</p></a
           >
         </li>
         <li class="lista__item">
           <img src="assets/GUJ.svg" />
-          <a href="#" class="lista__link">
-            <p class="lista__link__texto">GUJ</p></a
+          <a href="#" class="lista-rodapé__link">
+            <p class="lista-rodapé__link__texto">GUJ</p></a
           >
         </li>
       </ul>
