--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </div>
       </section>
 
-      <section class="carrosel">
+      <section class="carrossel">
         <h2 class="carrossel__titulo">mais vendidos</h2>
         <!-- Slider main container -->
         <div class="container__carrossel">
